// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackEditParameters /> should render a form for creation 1`] = `
<div>
  <h2>
    Create parameter
  </h2>
  <br />
  <form
    className="parameter-form"
    id="parameter-form"
    onSubmit={[Function]}
  >
    <fieldset>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="title"
        >
          Title
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="title"
            label="Title"
            maxLength={250}
            name="title"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give a descriptive title for this content pack.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="name"
        >
          Name
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="name"
            label="Name"
            maxLength={250}
            name="name"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            This is used as the parameter reference and must not contain a space.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="description"
        >
          Description
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="description"
            label="Description"
            maxLength={250}
            name="description"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give a description explaining what will be done with this parameter.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="type"
        >
          Value Type
        </label>
        <span>
          <select
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            disabled={false}
            id="type"
            label="Value Type"
            name="type"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="select"
            value="string"
          >
            <option
              value="string"
            >
              String
            </option>
            <option
              value="integer"
            >
              Integer
            </option>
            <option
              value="double"
            >
              Double
            </option>
            <option
              value="boolean"
            >
              Boolean
            </option>
          </select>
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give the type of the parameter.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="default_value"
        >
          Default value
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="default_value"
            label="Default value"
            maxLength={250}
            name="default_value"
            onChange={[Function]}
            placeholder=""
            type="text"
            value=""
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give a default value if the parameter is not optional.
          </span>
        </span>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`<ContentPackEditParameters /> should render a form for edition 1`] = `
<div>
  <h2>
    Edit parameter
  </h2>
  <br />
  <form
    className="parameter-form"
    id="parameter-form"
    onSubmit={[Function]}
  >
    <fieldset>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="title"
        >
          Title
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="title"
            label="Title"
            maxLength={250}
            name="title"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value="A parameter title"
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give a descriptive title for this content pack.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="name"
        >
          Name
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="name"
            label="Name"
            maxLength={250}
            name="name"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value="A parameter name"
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            This is used as the parameter reference and must not contain a space.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="description"
        >
          Description
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="description"
            label="Description"
            maxLength={250}
            name="description"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value="A parameter descriptions"
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give a description explaining what will be done with this parameter.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="type"
        >
          Value Type
        </label>
        <span>
          <select
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            disabled={true}
            id="type"
            label="Value Type"
            name="type"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="select"
            value="string"
          >
            <option
              value="string"
            >
              String
            </option>
            <option
              value="integer"
            >
              Integer
            </option>
            <option
              value="double"
            >
              Double
            </option>
            <option
              value="boolean"
            >
              Boolean
            </option>
          </select>
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give the type of the parameter.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="default_value"
        >
          Default value
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="default_value"
            label="Default value"
            maxLength={250}
            name="default_value"
            onChange={[Function]}
            placeholder=""
            type="text"
            value="test"
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give a default value if the parameter is not optional.
          </span>
        </span>
      </div>
    </fieldset>
  </form>
</div>
`;

exports[`<ContentPackEditParameters /> should render with empty parameters 1`] = `
<div>
  <h2>
    Create parameter
  </h2>
  <br />
  <form
    className="parameter-form"
    id="parameter-form"
    onSubmit={[Function]}
  >
    <fieldset>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="title"
        >
          Title
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="title"
            label="Title"
            maxLength={250}
            name="title"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give a descriptive title for this content pack.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="name"
        >
          Name
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="name"
            label="Name"
            maxLength={250}
            name="name"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            This is used as the parameter reference and must not contain a space.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="description"
        >
          Description
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="description"
            label="Description"
            maxLength={250}
            name="description"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="text"
            value=""
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give a description explaining what will be done with this parameter.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="type"
        >
          Value Type
        </label>
        <span>
          <select
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            disabled={false}
            id="type"
            label="Value Type"
            name="type"
            onChange={[Function]}
            placeholder=""
            required={true}
            type="select"
            value="string"
          >
            <option
              value="string"
            >
              String
            </option>
            <option
              value="integer"
            >
              Integer
            </option>
            <option
              value="double"
            >
              Double
            </option>
            <option
              value="boolean"
            >
              Boolean
            </option>
          </select>
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give the type of the parameter.
          </span>
        </span>
      </div>
      <div
        className="form-group"
      >
        <label
          className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
          htmlFor="default_value"
        >
          Default value
        </label>
        <span>
          <input
            className="FormControl-sc-1amoaox-0 hdNTyr form-control"
            id="default_value"
            label="Default value"
            maxLength={250}
            name="default_value"
            onChange={[Function]}
            placeholder=""
            type="text"
            value=""
          />
          <span
            className="HelpBlock-i8is92-0 huFHQV help-block"
          >
            Give a default value if the parameter is not optional.
          </span>
        </span>
      </div>
    </fieldset>
  </form>
</div>
`;
